--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     },
     "private": true,
     "scripts": {
+        "build": "npx tsc",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "APP_PORT=8080 node src/app.js --env $SHELL -- --trace-sync-io --trace-deprecation"
+        "start": "APP_PORT=8080 nodemon --trace-sync-io --trace-deprecation --exec 'ts-node src/server.ts --env $SHELL --'"
     },
     "homepage": "https://github.com/zhibirc/nodejs-1#readme",
     "repository": {
@@ -24,5 +25,14 @@
     "bugs": {
         "url": "https://github.com/zhibirc/nodejs-1/issues"
     },
-    "keywords": []
+    "keywords": [],
+    "dependencies": {
+        "http-status-codes": "^2.1.4",
+        "winston": "^3.3.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.14",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
+    }
 }
