--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "private": true,
     "scripts": {
         "build": "npx tsc",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "APP_PORT=8080 nodemon --trace-sync-io --trace-deprecation --exec 'ts-node src/server.ts --env $SHELL --'"
+        "test": "mocha --require ts-node/register",
+        "start": "APP_PORT=8080 nodemon --trace-sync-io --trace-deprecation --exec 'ts-node src/server.ts'"
     },
     "homepage": "https://github.com/zhibirc/nodejs-1#readme",
     "repository": {
@@ -27,10 +27,16 @@
     },
     "keywords": [],
     "dependencies": {
-        "http-status-codes": "^2.1.4",
-        "winston": "^3.3.3"
+        "axios": "^0.24.0",
+        "fastify": "^3.22.1",
+        "http-status-codes": "^2.1.4"
     },
     "devDependencies": {
+        "@types/expect.js": "^0.3.29",
+        "@types/mocha": "^9.0.0",
+        "@types/node": "^16.11.6",
+        "expect.js": "^0.3.1",
+        "mocha": "^9.1.3",
         "nodemon": "^2.0.14",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
