--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "scripts": {
         "check-env": "node -e 'console.log(process.env)' | grep npm",
         "build": "npx tsc",
-        "postbuild": "npm run test",
+        "postbuild": "",
         "test": "mocha",
-        "start": "APP_PORT=8080 nodemon --trace-sync-io --trace-deprecation"
+        "dev": "APP_PORT=8080 nodemon --trace-sync-io --trace-deprecation",
+        "prod": "APP_PORT=8080 node dst/server.js"
     },
     "homepage": "https://github.com/zhibirc/nodejs-1#readme",
     "repository": {
