--- a/package.json
+++ b/package.json
@@ -30,20 +30,21 @@
     },
     "keywords": [],
     "dependencies": {
-        "axios": "^0.24.0",
-        "fastify": "^3.22.1",
-        "http-status-codes": "^2.1.4",
-        "jsonwebtoken": "^8.5.1"
+        "axios": "~0.24.0",
+        "fastify": "~3.22.1",
+        "http-status-codes": "~2.1.4",
+        "jsonwebtoken": "~8.5.1",
+        "pg": "~8.7.1"
     },
     "devDependencies": {
-        "@types/expect.js": "^0.3.29",
-        "@types/jsonwebtoken": "^8.5.5",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "^16.11.6",
-        "expect.js": "^0.3.1",
-        "mocha": "^9.1.3",
-        "nodemon": "^2.0.14",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.4.4"
+        "@types/expect.js": "~0.3.29",
+        "@types/jsonwebtoken": "~8.5.5",
+        "@types/mocha": "~9.0.0",
+        "@types/node": "~16.11.6",
+        "expect.js": "~0.3.1",
+        "mocha": "~9.1.3",
+        "nodemon": "~2.0.14",
+        "ts-node": "~10.4.0",
+        "typescript": "~4.4.4"
     }
 }
