fix get all movies, add PG error codes, add env var for OMDB key on Docker build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
+        environment:
+            OMDB_KEY: ${OMDB_KEY}
         restart: unless-stopped
         depends_on:
             - db
